# module_qrcode

./: .gitignore  README.md  build.gradle  gradle.properties  lib_barcode_20210507.rar  lib_qrcode_20210507.rar  settings.gradle  zxing_source_3.4.1_qrcode.rar  zxing_v3.4.1.rar
app/: build.gradle
app/libs/: camera-core-1.0.0.aar  camera-lifecycle-1.0.0.aar  camera-view-1.0.0-alpha24.aar  lib_barcode_release_20210227.aar  lib_qrcode_release_20210224.aar  lib_qrcode_release_20210226.aar  lib_qrcode_release_20210227.aar  lib_zxing_r3.4.1_release_20210521.aar  lib_zxing_r3.4.1_release_20210524.aar  lib_zxing_r3.4.1_release_20210525.aar  lib_zxing_r3.4.1_release_20210526.aar  lib_zxing_r3.4.1_release_20210528.aar  lib_zxing_r3.4.1_release_20210531.aar  lib_zxing_r3.4.1_release_20210601.aar  lib_zxing_r3.4.1_release_20210602.aar  lib_zxing_r3.4.1_release_20210607.aar  lib_zxing_release_20210507.aar  lib_zxing_release_20210510.aar  lib_zxing_release_20210512.aar  lib_zxing_release_20210513.aar  lib_zxing_release_20210514.aar  lib_zxing_release_20210517.aar  lib_zxing_release_20210518.aar  lib_zxing_release_20210519.aar  lib_zxing_release_20210520.aar
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kalu/barcode/: MainActivity.java
app/src/main/java/com/kalu/zxing/: App.java  MainActivity.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_history.xml  activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/res/layout/: mn_scan_capture.xml
lib_barcode/: build.gradle
lib_barcode/src/main/: AndroidManifest.xml
lib_barcode/src/main/java/com/google/zxing/: EncodeHintType.java  MultiFormatReader.java  MultiFormatWriter.java  Reader.java  Writer.java
lib_barcode/src/main/java/lib/kalu/barcode/: BarcodeActivity.java  BarcodeManager.java  QrcodeActivity.java  QrcodeManager.java
lib_barcode/src/main/res/layout/: lib_barcode_activity_barcode.xml
lib_barcode/src/main/res/values/: strings.xml  styles.xml
lib_czxing_source_all/: build.gradle
lib_czxing_source_all/src/main/: AndroidManifest.xml
lib_czxing_source_all/src/main/cpp/: CMakeLists.txt  ImageScheduler.cpp  ImageScheduler.h  JNIUtils.cpp  JNIUtils.h  native-lib.cpp
lib_czxing_source_all_1.2.0/: build.gradle
lib_czxing_source_all_1.2.0/src/main/cpp/: CMakeLists.txt
lib_czxing_source_all_1.2.0/src/main/cpp/zxing_1.2.0/src/: MultiFormatReader.cpp
lib_czxing_source_all_opencv/src/main/cpp/: CMakeLists.txt  ImageScheduler.cpp  ImageScheduler.h  JNIUtils.h  native-lib.cpp
lib_czxing_source_all_opencv/src/main/res/layout/: activity_camera_scan.xml
lib_czxing_source_qrcode_1.2.0/: build.gradle
lib_czxing_source_qrcode_1.2.0/src/main/cpp/: CMakeLists.txt  JNIUtils.h  native.cpp
lib_czxing_source_qrcode_1.2.0/src/main/cpp/zxing_1.2.0/src/: BarcodeFormat.cpp  BarcodeFormat.h  GTIN.cpp  MultiFormatReader.cpp  MultiFormatWriter.cpp
lib_czxing_source_qrcode_1.2.0/src/main/res/values/: styles.xml
lib_czxing_ui/: build.gradle
lib_czxing_ui/src/main/: AndroidManifest.xml
lib_czxing_ui/src/main/java/lib/kalu/czxing/: QrcodeActivity.java
lib_czxing_ui/src/main/res/layout/: moudle_zxing_ui_activity_qrcode.xml
lib_czxing_ui/src/main/res/values/: ids.xml  styles.xml
lib_qr/: build.gradle
lib_qr/src/main/: AndroidManifest.xml
lib_qr/src/main/java/com/google/zxing/: MultiFormatReader.java  MultiFormatWriter.java  Writer.java
lib_qr/src/main/res/layout/: mn_scan_capture.xml
lib_qrcode/: build.gradle
lib_qrcode/src/main/: AndroidManifest.xml
lib_qrcode/src/main/java/com/google/zxing/: Result.java  ResultPoint.java  Writer.java
lib_qrcode/src/main/java/lib/kalu/qrcode/: QrcodeActivity.java  QrcodeManager.java
lib_qrcode/src/main/res/layout/: lib_qrcode_activity_qrcode.xml  mn_scan_capture.xml
lib_qrcode/src/main/res/values/: strings.xml  styles.xml
lib_zbar_source_jar/: build.gradle
lib_zbar_source_jar/src/main/java/net/sourceforge/zbar/: Config.java  Format.java  Image.java  ImageScanner.java  Modifier.java  Orientation.java  Symbol.java  SymbolIterator.java  SymbolSet.java
lib_zbar_source_ndk_all/: build.gradle
lib_zbar_source_ndk_all/src/main/: AndroidManifest.xml
lib_zbar_source_ndk_all/src/main/cpp/: CMakeLists.txt  config.h  zbarimg.c
lib_zbar_source_ndk_all/src/main/cpp/libiconv/libcharset/lib/: localcharset.c
lib_zbar_source_ndk_all/src/main/res/layout/: lib_zbar_activity_zbar.xml
lib_zbar_source_ndk_all/src/main/res/values/: styles.xml
lib_zbar_source_ndk_qrcode/: build.gradle
lib_zbar_source_ndk_qrcode/src/main/: AndroidManifest.xml
lib_zbar_source_ndk_qrcode/src/main/cpp/: CMakeLists.txt  config.h  zbarjni.c
lib_zbar_source_ndk_qrcode/src/main/cpp/zbar/: config.c  decoder.c  decoder.h  img_scanner.c  symbol.c
lib_zbar_source_ndk_qrcode/src/main/cpp/zbar/include/: zbar.h
lib_zbar_source_ndk_qrcode/src/main/res/: build.gradle
lib_zbar_ui/: build.gradle
lib_zbar_ui/src/main/: AndroidManifest.xml
lib_zbar_ui/src/main/java/lib/kalu/zbar/: QrcodeActivity.java
lib_zbar_ui/src/main/res/layout/: moudle_zbar_ui_activity_qrcode.xml
lib_zbar_ui/src/main/res/values/: ids.xml  strings.xml  styles.xml
lib_zxing/: build.gradle
lib_zxing_mini/: build.gradle  proguard-rules-dict-mini.txt  proguard-rules.pro
lib_zxing_mini/src/main/: AndroidManifest.xml
lib_zxing_source_all/: build.gradle
lib_zxing_source_qrcode/src/main/java/com/google/zxing/: BarcodeFormat.java  Binarizer.java  (+9 more)
lib_zxing_ui/: build.gradle
lib_zxing_ui/libs/: camera-camera2-1.0.0.aar  camera-camera2-1.1.0-alpha04.aar  camera-core-1.1.0-alpha04.aar  camera-extensions-1.0.0-alpha24.aar  camera-lifecycle-1.1.0-alpha04.aar
lib_zxing_ui/src/main/: AndroidManifest.xml
lib_zxing_ui/src/main/res/layout/: lib_zxing_ui_activity_capture.xml  moudle_zxing_ui_activity_qrcode.xml
lib_zxing_ui/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
proguard/: proguard-rules.pro  proguard-rules2.pro
(+487 files in other folders)
